--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
   <body style="background-color: #383e42">
     <div class="card-container">
       <div class="card">
-        <img
-          src="black-magician.jpg"
-          class="card-img-top"
-          alt="Kitty in the house "
-        />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
@@ -30,11 +26,7 @@
         </div>
       </div>
       <div class="card">
-        <img
-          src="/34541863.jpg"
-          class="card-img-top"
-          alt="Kitty in the house "
-        />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
@@ -44,7 +36,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="cat.jpg" class="card-img-top" alt="Kitty in the house " />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
@@ -54,7 +46,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="cat.jpg" class="card-img-top" alt="Kitty in the house " />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
@@ -64,7 +56,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="cat.jpg" class="card-img-top" alt="Kitty in the house " />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
@@ -74,7 +66,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="cat.jpg" class="card-img-top" alt="Kitty in the house " />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
@@ -84,7 +76,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="cat.jpg" class="card-img-top" alt="Kitty in the house " />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
@@ -94,7 +86,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="cat.jpg" class="card-img-top" alt="Kitty in the house " />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
@@ -104,7 +96,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="cat.jpg" class="card-img-top" alt="Kitty in the house " />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
@@ -114,17 +106,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="cat.jpg" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="cat.jpg" class="card-img-top" alt="Kitty in the house " />
+        <img src="" class="card-img-top" alt="Kitty in the house " />
         <div class="card-body">
           <p class="card-text">ID:</p>
           <p class="card-text">NAME :</p>
