--- a/index.html
+++ b/index.html
@@ -15,108 +15,17 @@
   </head>
   <body style="background-color: #383e42">
     <div class="card-container">
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="" class="card-img-top" alt="Kitty in the house " />
-        <div class="card-body">
-          <p class="card-text">ID:</p>
-          <p class="card-text">NAME :</p>
-          <p class="card-text">TYPE :</p>
-          <p class="card-text">ATK :</p>
-          <p class="card-text">DEF :</p>
-        </div>
-      </div>
+      <!--   <div class="card">
+  <img src="${}" class="card-img-top" alt="Kitty in the house " />
+  <div class="card-body">
+    <p class="card-text">ID:</p>
+    <p class="card-text">NAME :</p>
+    <p class="card-text">TYPE :</p>
+    <p class="card-text">ATK :</p>
+    <p class="card-text">DEF :</p>
+  </div>
+</div> -->
     </div>
-
     <script src="app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
